# ai-coding-guide

./: .gitignore  LICENSE  README.md  README_ZH.md  package.json  pnpm-lock.yaml  pyproject.toml  start.sh
demos/01-first-experience/: free_options.ipynb  hello_llm.ipynb
demos/02-ai-landscape/: aggregators.ipynb  local_deployment.ipynb  model_providers.ipynb
demos/03-llm-fundamentals/: parameters.ipynb  reasoning_models.ipynb  tokenization.ipynb
demos/04-prompt-engineering/: advanced_techniques.ipynb  prompt_basics.ipynb  structured_output.ipynb
demos/07-function-calling/: function_calling.ipynb  orchestration.ipynb  tool_use.ipynb
demos/08-multimodal/: image_generation.ipynb  realtime.ipynb  speech_audio.ipynb  vision.ipynb
demos/09-ai-agents/: agent_concepts.ipynb  computer_use.ipynb  frameworks.ipynb  react_agent.ipynb
demos/10-multi-agent/: architectures.ipynb  handoff.ipynb  research_system.ipynb
demos/11-protocols/: mcp_server.ipynb  protocols_overview.ipynb
demos/12-rag-memory/: advanced_rag.ipynb  basic_rag.ipynb  memory_chatbot.ipynb  vector_search.ipynb
demos/13-production/: cost_optimization.ipynb  evaluation.ipynb  guardrails.ipynb  observability.ipynb
demos/14-practice/: code_review.ipynb  knowledge_base.ipynb  ops_assistant.ipynb  team_toolchain.ipynb
docs/: index.md
docs/01-first-experience/: free-options.md  index.md
docs/02-ai-landscape/: aggregators.md  index.md  local-deployment.md  model-providers.md  open-source-models.md
docs/03-llm-fundamentals/: fine-tuning.md  index.md  parameters.md  (+1 more)
scripts/: bilingual_notebooks.py
(+164 files in other folders)
