[project]
name = "ai-coding-guide-demos"
version = "0.1.0"
description = "AI 编程教程配套 Demo 代码"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "anthropic>=0.30",
    "google-genai>=1.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "tiktoken>=0.7",
    "pydantic>=2.0",
    "jupyter>=1.0",
    "rich>=13.0",
]
